--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,8 @@
   --font-jersey-lg: "Jersey 20", sans-serif;
 
   --color-dark-theme: #302f2f;
+  --color-dark-text: #7c7a7a;
+  --color-sub-head: #aeaeae;
 }
 
 @media (prefers-color-scheme: dark) {
