Added projects page & updated pixel art

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@
   --font-jersey-lg: "Jersey 20", sans-serif;
 
   --color-dark-theme: #302f2f;
-  --color-dark-text: #7c7a7a;
+  --color-dark-text: #a0a0a0;
+  --color-project-text: #4b4b4b;
   --color-sub-head: #aeaeae;
 }
 
