--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Jersey+20&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap");
-
 @import "tailwindcss";
 
 :root {
@@ -10,17 +5,22 @@
   --foreground: #171717;
 }
 
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --font-jersey-lg: "Jersey 20", sans-serif;
+  --font-jersey-sm: var(--font-jersey-10);
+  --font-jersey-lg: var(--font-jersey-20);
+  --font-body-text: var(--font-jetbrains-mono);
+  --font-credits: var(--font-afacad);
 
   --color-dark-theme: #302f2f;
-  --color-dark-text: #a0a0a0;
+  --color-dark-text: #696969;
+  --color-light-text: #c2c2c2;
   --color-project-text: #4b4b4b;
-  --color-sub-head: #aeaeae;
+  --color-sub-head: #999999;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,20 +34,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.font-jersey-lg {
-  font-family: "Jersey 20", sans-serif;
-}
-
-.font-jersey-sm {
-  font-family: "Jersey 10", sans-serif;
-}
-
-.font-body-text {
-  font-family: "JetBrains Mono", monospace;
-}
-
-.font-credits {
-  font-family: "Afacad", sans-serif;
 }
